<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScreenShotDetectionApi"
        style="@style/TextViewBold"
        android:text="@string/screen_shot_detection_api"
        android:layout_marginTop="@dimen/button_top_margin" />
    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewBold"
        android:text="@string/custom_share_intent_sheet"
        android:layout_marginTop="@dimen/button_top_margin" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewBold"
        android:text="@string/grammatical_inflection_api"
        android:layout_marginTop="@dimen/button_top_margin" />
    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewBold"
        android:text="@string/regional_preferences"
        android:layout_marginTop="@dimen/button_top_margin" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewBold"
        android:text="@string/back_gesture_preview"
        android:layout_marginTop="@dimen/button_top_margin" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewBold"
        android:text="@string/photos_or_videos_permission_flow"
        android:layout_marginTop="@dimen/button_top_margin" />
</LinearLayout>