<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GrammaticalInflectionActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMasculine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="15dp"
        android:text="Masculine"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnFaminine"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnFaminine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:text="Faminine"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@id/btnMasculine"
        app:layout_constraintTop_toTopOf="@id/btnMasculine"
        app:layout_constraintEnd_toStartOf="@id/btnNueter"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNueter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:text="Nueter"
        android:padding="5dp"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/btnFaminine"
        app:layout_constraintTop_toTopOf="@id/btnMasculine"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnMasculine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/selected_text"
        android:textStyle="bold|italic"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvSelected"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/post"
        android:textSize="18sp"
        android:id="@+id/position"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/position"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/hiring_sentence"
        android:textSize="14sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>